# gist

./: LICENSE  README.md
langchain/: .example.env  agent.py  fastapi_stream.py  fastapi_stream_use_iter.py  flash_socketio.py  llama.py  my_llamacpp.py  pyproject.toml  requirements.txt  test.sh
langchain/template-app/: README.md
langchain/template-app/app/: server.py
langchain/templates/: flask_socketio_client.html
observe /: main.py  pyproject.toml
