[tool.poetry]
name = "gist-langchain"
version = "0.1.0"
description = ""
authors = ["ninely"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
langchain = "^0.0.262"
openai = "^0.27.7"
python-dotenv = "^1.0.0"
duckduckgo-search = "^3.8.3"
flask = "^2.3.2"
flask-socketio = "^5.3.5"
flask-cors = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
