[tool.poetry]
name = "gist-langchain"
version = "0.1.0"
description = ""
authors = ["ninely"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
langchain = "^0.0.317"
openai = "^0.28.1"
python-dotenv = "^1.0.0"
duckduckgo-search = "^3.9.3"
flask = "^2.3.2"
flask-socketio = "^5.3.5"
flask-cors = "^4.0.0"
google-search-results = "^2.4.2"
llama-cpp-python = "^0.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
